tests/fixtures/invalid/bytes_bitxor_str.py
# Cannot bitwise XOR Bytes and Str
x: bytes = b"hello" ^ "hello"
